Created the starting functionality of the program

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-con">
     <title>Random multiplication table</title>
 </head>
 <body>
-
+    <!-- Script -->
+    <script src="js/script.js"></script>
 </body>
 </html>
